# jamixir

./: .credo.exs  .dockerignore  .gitignore  Dockerfile  Dockerfile.polkajam  FAQ.md  README.md  RPC_TEST_COMMANDS.md  check_vectors_count.sh  coveralls.json  ctest.sh  docker-compose.yml  full_vector_test.sh  genesis.json  implemented_formulas.sh  import_blocks.sh  issues.txt  jamixir.sh  mix.exs  node.sh  process_eprof.sh  process_eprofff.sh  receitas especiais da sonia.txt  run_node.sh  test.json  test_vectors.etf
.github/ISSUE_TEMPLATE/: gp_equation.md
.github/workflows/: release.yml  test.yml
config/: config.exs  dev.exs  full_test.exs  prod.exs  test.exs  tiny.exs
genesis/: genesis.ex  genesis.json
lib/: chainspec.ex  cli.ex  constants.ex  jamixir.ex  key_manager.ex  map_union.ex  meta.ex  node.ex  node_cli_server.ex  node_state_server.ex  repo.ex  selective_mock.ex  signing_contexts.ex  sizes.ex  storage.ex  tcp_server.ex  types.ex
lib/authorization/: auth.ex
lib/block/: block.ex  extrinsic.ex  header.ex  intake.ex  state.ex
lib/clock/: clock.ex  event.ex
lib/codec/: decoder.ex  encodable.ex  encoder.ex  erasure_coding.ex  json_decoder.ex  json_encodable.ex  json_encoder.ex  nil_discriminator.ex  scale_encoder.ex  scale_native.ex  state.ex  system.ex  variable_size.ex
lib/commands/: fuzzer.ex  gen_chainspec.ex  gen_keys.ex  list_keys.ex  run.ex
lib/disputes/: culprit.ex  dispute_validator.ex  disputes.ex  fault.ex  helper.ex  judgment.ex  processed_verdict.ex  validator.ex  verdict.ex  verifier.ex
lib/fuzzer/: client.ex  service.ex  util.ex
lib/jamixir/: initialization_task.ex  node_api.ex  node_identity.ex  release.ex  time_ticker.ex
lib/macros/: access_struct.ex  map_union.ex  mockable.ex  range_macro.ex  selective_mock.ex  type_macro.ex
lib/mock_macros/: mockable.ex  selective_mock.ex
lib/network/: README.md  calls.ex  cert_utils.ex  client.ex  client_api.ex  client_calls.ex  codec.ex  config.ex  connection.ex  connection_info.ex  connection_manager.ex  connection_policy.ex  connection_state.ex  connection_supervisor.ex  flags.ex  listener.ex  message_handler.ex  message_parsers.ex  peer.ex  peer_registry.ex  peer_state.ex  peer_supervisor.ex  rules.ex  server.ex  server_calls.ex  server_calls_behaviour.ex  stream_manager.ex  stream_utils.ex  up_stream_manager.ex
lib/pvm/: accumulation_operand.ex  (+15 more)
native/bandersnatch_ring_vrf/: Cargo.toml
native/bandersnatch_ring_vrf/src/: commitment.rs  lib.rs  ring_context.rs  secret_ops.rs  types.rs  vrf_operations.rs
native/bandersnatch_ring_vrf/src/rustler_bridges/: fixed_columns_commited.rs  kzg_commitment.rs  mod.rs  public.rs  secret.rs  types.rs
native/erasure_coding/: .gitignore  Cargo.toml  README.md
native/erasure_coding/src/: erasure_codec.rs  error.rs  lib.rs  lib2.rs  merklize.rs  nif.rs  subshard.rs  test_data.json
native/erasure_coding/tests/: erasure_coding.rs
native/pvm/: Cargo.toml
native/pvm/.cargo/: config.toml
native/pvm/src/: atoms.rs  child_vm.rs  context.rs  execution.rs  init_program.rs  lib.rs  memory.rs  nif_functions.rs  nif_types.rs
native/pvm/src/core/: bitmask.rs  consts.rs  errors.rs  memory.rs  mod.rs  program.rs  registers.rs  start_set.rs
native/pvm/src/encoding/: decoder.rs  encoder.rs
native/pvm/src/types/: host_result.rs  mod.rs
native/pvm/src/vm/: execute_instruction.rs  memory_wrappers.rs  mod.rs  single_step.rs  test_builder.rs  types.rs  utils.rs  vm.rs
native/pvm/src/vm/dispatchers/: mod.rs  no_args.rs  one_immediate.rs  reg_imm_offset.rs  reg_immediate.rs  reg_two_imm.rs  three_registers.rs  two_immediates.rs  two_registers.rs  two_registers_one_immediate.rs  two_registers_one_offset.rs  two_registers_two_immediates.rs
native/pvm/src/vm/instructions/: instruction_category.rs  mod.rs  opcodes.rs
native/pvm/tests/: decoder_tests.rs  dispatcher_tests.rs  lib_tests.rs  utils_tests.rs  vectors.rs
native/pvm/tests/dispatchers/: dispatcher_no_args_tests.rs  dispatcher_one_immediate_tests.rs  dispatcher_reg_imm_offset_tests.rs  dispatcher_reg_immediate_tests.rs  dispatcher_two_immediates_tests.rs  dispatcher_two_registers_one_immediate_tests.rs  mod.rs
native/scale_encoder/: Cargo.toml
native/scale_encoder/src/: build.rs  lib.rs
priv/: alice.json  cert.pem  genesis.json  genesis_header.json  jamixir_wrapper.sh  polkajam_chainspec.json  secret.pem
rel/: vm.args.eex
test/: chainspec_test.exs  constants_test.exs  genesis-keyvals.json  hashed_keys_map_test.exs  jamixir_test.exs  key_manager_test.exs  local_vector_test.exs  node_cli_server_test.exs  node_state_server_test.exs  node_test.exs  on_transfer_test.exs  storage_test.exs  test_helper.exs  tiny_vector_test.exs  vector_test.exs
(+447 files in other folders)
