[package]
name = "bandersnatch_ring_vrf"
version = "0.1.0"
edition = "2021"
authors = ["Baruch Fishman"]

[lib]
name = "bandersnatch_ring_vrf"
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]
ark-ec-vrfs = { git = "https://github.com/jamixir/ark-ec-vrfs", rev = "0441f84", features = [
    "bandersnatch",
    "ring",
] }
ring-proof = { package = "ring", git = "https://github.com/jamixir/ring-proof", rev = "3866416", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false, features = [
    "derive",
] }
hex = "0.4.3"
rustler = "0.34.0"
rand_chacha = { version = "0.3", default-features = false }
