[package]
name = "bandersnatch_ring_vrf"
version = "0.1.0"
edition = "2021"
authors = ["Baruch Fishman"]

[lib]
name = "bandersnatch_ring_vrf"
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]

ark-ec-vrfs = { version = "0.1.2", features = ["bandersnatch", "ring"] }
ring-proof = { package = "w3f-ring-proof", version = "0.0.2", default-features = false }

ark-ec = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false, features = [
    "derive",
] }

hex = "0.4.3"
rustler = "0.34.0"
rand_chacha = { version = "0.3", default-features = false }
