[package]
name = "erasure_coding"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "erasure_coding"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
blake2b_simd = { version = "1", default-features = false }
bounded-collections = { version = "0.1.9", default-features = false }
reed-solomon-simd = "3.0.1"
# scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false,  features = ["derive"] }
thiserror = { version = "1.0.56", default-features = false }
hex = "0.4.3"
rand = { version = "0.8.4", features = [ "small_rng"] }
rustler = "0.34.0"
lazy_static = "1.0.0"

serde = "1.0.210"
serde_json = "1.0.128"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }
quickcheck = { version = "1.0.3", default-features = false }
