[package]
name = "pvm"
version = "0.1.0"
edition = "2021"

[lib]
name = "pvm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pvm-rust = { git = "ssh://git@github.com/jamixir/pvm-rust.git", rev = "c6aeaaab2a3c622eb3becd6785b81847b161b208" }
rustler = "0.36.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
