[package]
name = "scale_encoder"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = "0.32.0"
parity-scale-codec = "3.0" # Or your preferred version

[build]
rustflags = [
  "-L",
  "/usr/local/opt/erlang/lib",
  "-L",
  "/usr/local/Cellar/erlang/26.2.5/lib/erlang/lib",
  "-lerl_interface",
  "-lei",
]
